--- a/fe/src/assets/css/main.css
+++ b/fe/src/assets/css/main.css
@@ -1,22 +1,29 @@
 :root {
+    --body-background: #f1f1f2;
+
     --body-margin: 32px;
     --row-distance: 10px;
     --content-padding: 16px;
     --header-height: 60px;
 
-    --ft-color-0: #d4d4d4;
-    --ft-color-1: white;
+    --ft-color-0: black;
+    --ft-color-1: gray;
+    --ft-color-2: rgb(63, 63, 63);
 
-    --bg-color-0: #081326;
-    --bg-color-1: #091629;
+    --bg-color-0: white;
+    --bg-color-1: #d4d4d4;
+    --bg-color-2: #f1f1f2;
+    --bg-color-dark: hsl(210, 8%, 15%);
 }
 
 html {
-    background-color: var(--bg-color-0, rgb(124, 124, 124));
+    /* background-color: var(--bg-color-0, rgb(124, 124, 124)); */
+    background-color: var(--body-background, #f1f1f2);
 }
 
 body {
     margin: 0;
+    background-color: var(--body-background, #f1f1f2);
 }
 
 .main-content {
