更新创建属性的UI

--- a/ds/src/assets/css/main.css
+++ b/ds/src/assets/css/main.css
@@ -29,3 +29,8 @@ body {
 .main-content {
     padding: var(--content-padding, 16px);
 }
+
+.el-tooltip__popper {
+    word-break: break-all !important;
+    max-width: 600px !important;
+}
